# securellm-bridge

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .mcp.json  BRIDGE_REFACTORING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISPLAY_SETUP.sh  Dockerfile  INTEGRATION_SUMMARY.md  Justfile  LICENSE-MIT  Makefile  NEXT-STEPS.md  NEXT_STEPS.md  NIX_GITLAB_DUO_SETUP.md  OPENWEBUI_INTEGRATION.md  PHOENIX_ARCHITECTURE_REPORT.md  PORTFOLIO_AUDIT.md  README.md  README_PORTFOLIO.md  SETUP_COMPLETE.md  TODO_PLAN.md  TODO_PRODUCTION.md  build-core-v2.sh  debug_env.py  default.nix  flake-inner.nix  flake-inner.nix.backup  flake.nix  helper.md  pyproject.toml  requirements.txt  start-server.sh  start_cerebro.sh  start_embedding_server.sh
.archive/: audit_credits_bigquery.py  burn_credits_loadtest.py  burn_dialogflow_cx.py  import_documents.py  manage_datastores.py  test_credits.py  validate_credits.py
.claude/: CLAUDE.docx  CLAUDE.md
.claude/agents/: security-architect.md
.claude/skills/: provider-integration.md
.claude/workflows/: ml-offload-integration.yaml
.github/workflows/: ci.yml  deploy.yml
.gitlab-ci/: README.md
.gitlab-ci/scripts/: build.sh  deploy.sh  setup.sh  test.sh
.gitlab-ci/stages/: validate.yml
.gitlab/merge_request_templates/: default.md
CLAUDE/: CHEATSHEET.md  EXAMPLES.md  RIGOR.md  SKILL.md
config/: config.toml  repos.yaml
config/examples/: hooks-reference.yaml
configs/: hyprland-agent.conf
crates/agent-tui/: Cargo.toml
crates/agent-tui/src/: main.rs
crates/agents/: Cargo.toml
crates/agents/examples/: basic_agent.rs
crates/agents/src/: cache.rs  executor.rs  lib.rs  parser.rs  registry.rs  tool.rs
crates/agents/src/tools/: echo.rs  mod.rs
crates/api-server/: .env  .env.example  Cargo.toml  README.md
crates/api-server/migrations/: 20240101000000_initial_schema.sql
crates/api-server/migrations/20260122000000_create_audit_logs/: migration.sql
crates/api-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/api-server/src/dashboard/: analyzer.rs  mod.rs  models.rs  routes.rs  scanner.rs  state.rs
crates/api-server/src/middleware/: mod.rs  rate_limit.rs
crates/api-server/src/routes/: chat.rs  completions.rs  health.rs  metrics.rs  mod.rs  models.rs
crates/api-server/src/services/: audit.rs  mod.rs
crates/api-server/tests/: integration_fallback.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs
crates/context-manager/: Cargo.toml
crates/context-manager/src/: compression.rs  lib.rs  sliding_window.rs  tokenizer.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  error.rs  intelligence.rs  lib.rs  models.rs  rate_limit.rs  request.rs  response.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  lib.rs  llamacpp.rs  nvidia.rs  ollama.rs  openai.rs
crates/security/: Cargo.toml
crates/security/src/: crypto.rs  lib.rs  sandbox.rs  sanitizer.rs  secrets.rs  tls.rs
crates/task-manager/: Cargo.toml
crates/task-manager/src/: executor.rs  lib.rs  persistence.rs  queue.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  input_mode.rs  lib.rs  theme.rs
crates/tui/src/components/: chat_panel.rs  context_panel.rs  logs_panel.rs  mod.rs  status_bar.rs  tab_bar.rs  task_panel.rs  tool_panel.rs
crates/tui/src/multiplex/: layout.rs  mod.rs  pane.rs  tabs.rs
crates/tui/src/themes/: catppuccin.rs  mod.rs
crates/voice-agents/: Cargo.toml
crates/voice-agents/src/: audio_capture.rs  audio_playback.rs  lib.rs  tts_engine.rs  wyoming.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docker/: Dockerfile  Dockerfile.alpine  docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DATA_FLOW.md  AUTOMATION_SYSTEMS.md  CAPABILITIES.md  CHEATSHEET.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  COVERAGE_GAP.md  CREDIT_BURNER_DETAILED.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  GITLAB_CI_CD.md  GITLAB_CI_MIGRATION.md  HACKS_ROI.md  HIGH_ROI_QUERIES.md  HOOKS_AND_CAPABILITIES_IMPROVEMENTS.md  INDEX.md  INTEL_SOURCES.md  MASTER_EXECUTION_PLAN.md  MIGRATION_COMPLETE.md  NEXT_STEPS.md  PROJETO_COMPLETO.md  QUERY_MASTERY.md  QUICKSTART_KB.md  QUICK_START.md  README.md  README_SPEEDRUN.md  README_pt-br.md  RESUMO_EXECUTIVO.md  SECURITY.md  STACK_MASTERY.md  STATUS.md  VICTORY_PLAYBOOK.md
docs/commands/: README.md  cerebro_info.md  cerebro_knowledge_analyze.md  cerebro_knowledge_batch-analyze.md  cerebro_knowledge_summarize.md  cerebro_version.md  (+2 more)
examples/: basic_usage.sh  rust_api_example.rs
mnt/user-data/outputs/secure-llm-bridge/crates/cli/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/core/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/desktop/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/desktop/src/: lib.rs
mnt/user-data/outputs/secure-llm-bridge/crates/providers/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/providers/src/: lib.rs
mnt/user-data/outputs/secure-llm-bridge/crates/proxy/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/proxy/src/: lib.rs
mnt/user-data/outputs/secure-llm-bridge/crates/security/: Cargo.toml
mnt/user-data/outputs/secure-llm-bridge/crates/security/src/: lib.rs
nix/: INSTALL.md  flake.nix  phoenix-aliases.nix
scripts/: MASTER_EXECUTION_PLAN.md  README.md  README_ARSENAL.md  batch_burn.py  check_billing_table.sh  ci-test.sh  content_gold_miner.py  create_search_engine.py  etl_docs.py  generate-docs.sh  generate_docs.py  generate_queries.py  grounded_generation_test.py  grounded_search.py  index_repository.py  install_completions.sh  load_test.js  monitor_credits.py  personal_moat_builder.py  pipeline.sh  queries.txt  queries_salary_intel.txt  quick-start.sh  report.sh  salary_intel.py  setup_bigquery_export.sh  setup_bigquery_simple.sh  speedrun.sh  strategy_optimizer.py  sync_data.sh  trend_predictor.py  validate.sh  verify_grounded_api.py
src/: config.rs
tests/: conftest.py  debug_cli.py  test_analyzer.py  test_cli.py  test_rag.py
(+64 files in other folders)
