[workspace]
members = [
    "crates/core",
    "crates/security",
    "crates/providers",
    "crates/agents",
    "crates/cli",
    "crates/api-server",
    "crates/tui",
    "crates/task-manager",
    "crates/context-manager",
    "crates/voice-agents",
    "crates/agent-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SecureLLM Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/securellm/bridge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP/Network
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
hyper = { version = "1.4", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }

# Security/Crypto
rustls = "0.23"
rustls-pemfile = "2.1"
ring = "0.17"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
directories = "5.0"

# Rate limiting
governor = "0.6"

# Redis connection pooling
deadpool-redis = "0.16"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database (for audit logs)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
dashmap = "6.0"

# TUI Framework
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"

# Context Compression
zstd = "0.13"
flate2 = "1.0"

# Voice Processing
cpal = "0.15"
tts = { version = "0.26", default-features = false }
hound = "3.5"

# Tokenization
tiktoken-rs = "0.5"

# LRU Cache
lru = "0.12"

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.dependencies.serial_test]
version = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
