[tool.poetry]
name = "phantom-cli"
version = "0.1.0"
description = "Phantom - Unified Framework for Code Analysis and RAG"
authors = ["Kernel Core <kernel@example.com>"]
readme = "README.md"
packages = [{include = "phantom", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-discoveryengine = ">=0.11.0"
google-cloud-storage = "*"
google-cloud-aiplatform = "*"
google-cloud-billing = "*"
google-auth = "*"
fastapi = "*"
uvicorn = "*"
chromadb = "*"
sentence-transformers = "*"
transformers = "*"
torch = "*"
accelerate = "*"
bitsandbytes = "*"
tree-sitter = "*"
tree-sitter-languages = "*"
gitpython = "*"
beautifulsoup4 = "*"
markdown = "*"
pygments = "*"
pydantic = "*"
typer = ">=0.9.0,<0.10.0"
rich = "*"
tqdm = "*"
python-dotenv = "*"
pyyaml = "^6.0.3"
langchain = "^1.2.0"
langchain-chroma = "^1.1.0"
langchain-google-vertexai = "^3.2.0"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "agents", "data"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phantom = "phantom.cli:app"
