[project]
name = "phantom-cli"
version = "0.1.0"
description = "Phantom - Unified Framework for Code Analysis and RAG"
authors = [{ name = "Kernel Core", email = "kernel@example.com" }]
readme = "README.md"
requires-python = "^3.13"

[project.scripts]
phantom = "phantom.cli:app"
cerebro = "phantom.cli:app"

[tool.poetry]
packages = [{ include = "phantom", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-discoveryengine = ">=0.11.0"
google-cloud-storage = "*"
google-cloud-aiplatform = "*"
google-cloud-billing = "*"
google-cloud-dialogflow-cx = "*"
google-auth = "*"
fastapi = "*"
uvicorn = "*"
chromadb = "*"
sentence-transformers = "*"
transformers = "*"
torch = "*"
accelerate = "*"
bitsandbytes = "*"
tree-sitter = "*"
tree-sitter-language-pack = "^0.7.0"
gitpython = "*"
beautifulsoup4 = "*"
markdown = "*"
pygments = "*"
pydantic = "*"
typer = "^0.12.0"
rich = "*"
tqdm = "*"
python-dotenv = "*"
pyyaml = "^6.0.3"
langchain = "^1.2.0"
langchain-chroma = "^1.1.0"
langchain-google-vertexai = "^3.2.0"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.0"
click = "<8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "agents", "data"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
