[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async
tokio = { workspace = true }

# LLM
securellm-core = { path = "../core" }
securellm-providers = { path = "../providers" }

# Utils
anyhow = { workspace = true }
serde_json = { workspace = true }
