[package]
name = "securellm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "securellm"
path = "src/main.rs"

[dependencies]
# Local crates
securellm-core = { path = "../core" }
securellm-providers = { path = "../providers" }
securellm-security = { path = "../security" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
toml = { workspace = true }
directories = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Additional CLI dependencies
colored = "2.1"
indicatif = "0.17"
inquire = "0.7"
uuid = { workspace = true }
rpassword = "7.3"
