[package]
name = "securellm-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local crates
securellm-core = { path = "../core" }
securellm-agents = { path = "../agents" }
securellm-providers = { path = "../providers" }
securellm-task-manager = { path = "../task-manager" }
securellm-context-manager = { path = "../context-manager" }
securellm-voice-agents = { path = "../voice-agents" }

# TUI Framework
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
