[package]
name = "securellm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "securellm"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

# Local dependencies
securellm-core = { path = "../core" }
securellm-security = { path = "../security" }
securellm-providers = { path = "../providers" }

# Additional CLI dependencies
colored = "2.1"
indicatif = "0.17"
