[package]
name = "securellm-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

# Local dependencies
securellm-core = { path = "../core" }
securellm-security = { path = "../security" }
securellm-providers = { path = "../providers" }

# Desktop app dependencies (to be added when implementing GUI)
# tauri = "1.5"
# or
# iced = "0.12"
