[package]
name = "securellm-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

# Local dependencies
securellm-core = { path = "../core" }
securellm-security = { path = "../security" }
securellm-providers = { path = "../providers" }

# Proxy-specific dependencies
governor = { workspace = true }
